# volter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  plan.md  ui-concept.md
.github/workflows/: ci.yml
crates/contracts/: Cargo.toml
crates/contracts/src/: bindings.rs  lib.rs  manifest.rs  plan.rs  resolver.rs  role.rs
crates/control-plane/: Cargo.toml  Dockerfile
crates/control-plane/migrations/: 0001_init.sql
crates/control-plane/src/: auth.rs  lib.rs  main.rs  store.rs
crates/control-plane/tests/: http.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/runtime-plane/: Cargo.toml
crates/runtime-plane/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
docs/: bindings.md  contracts.md  data-model.md  prototype-lessons.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AuthCard.tsx
frontend/src/pages/: AppShell.tsx
nginx/: default.conf
ops/: Caddyfile.example  README.md  backup.sh  deploy.sh  install.sh  smoke.sh
