[workspace]
resolver = "2"
members = [
    "crates/shared-types",
    "crates/contracts",
    "crates/runtime-plane",
    "crates/engine",
    "crates/control-plane",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "proprietary"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
anyhow = "1"
thiserror = "2"
